# PYAI

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  PYAI_README.md  README.md  README_PYPI.md  SECURITY.md  build.ps1  demo.py  llms.txt  mkdocs.yml  pyproject.toml  setup.py  test_real_world.py  test_usecases.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pipeline.yml  tests.yml
.internal/analysis/: COMPETITOR_ANALYSIS.md  RELEASE_PLAN.md
.internal/architecture/: KNOWLEDGE_BASE.md  LANDSCAPE.md  MARKET_USECASES.md  PROCESSES.md  PRODUCTS.md  USECASES.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  AZURE_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  QUICKSTART.md  index.md
docs/wiki/: A2A-Module.md  A2A-Protocol.md  A2AServer.md  API-Reference.md  Agent.md  Architecture.md  Azure-AD-Auth.md  Built-in-Skills.md  Changelog.md  ChromaDB.md  Configuration.md  Contributing.md  Creating-Tools.md  Design-Philosophy.md  EvalSet.md  Evaluation-Module.md  Evaluation.md  Guardrails.md  Handoffs.md  Home.md  ImageContent.md  Installation.md  Kernel-Registry.md  LLM-Providers.md  Memory.md  Multimodal.md  OpenAPI-Tools.md  OpenAPIClient.md  Orchestration-Patterns.md  PluginBase.md  Plugins-Module.md  Quick-Start.md  Runner.md  Sessions.md  Software-Factories.md  Synthesis.md  Three-Dimensions.md  Transcription.md  Vector-Database.md  VectorDB-Module.md  (+18 more)
examples/: README.md  basic_agent.py  comprehensive_examples.py  config_helper.py  custom_skills.py  multi_agent_workflow.py  quick_start.py  research_agent.yaml  smart_research_assistant.py  weather_app.py
pyagent/: __init__.py  __init__.pyi
pyagent/blueprint/: __init__.py
pyagent/core/: __init__.py  llm.py
pyagent/easy/: agent_factory.py  config.py  extract.py  llm_interface.py  rag.py
pyagent/integrations/: __init__.py  vector_db.py
pyagent/skills/: __init__.py
src/openstackai/: __init__.py
src/openstackai/a2a/: __init__.py  client.py  protocol.py  registry.py  server.py
src/openstackai/blueprint/: __init__.py  blueprint.py  patterns.py
src/openstackai/cli/: __init__.py  app.py  main.py
src/openstackai/code_executor/: __init__.py  executor.py
src/openstackai/config/: __init__.py  builder.py  loader.py  schema.py
src/openstackai/core/: __init__.py  agent.py  base.py  cache.py
src/openstackai/devui/: __init__.py  dashboard.py  debugger.py  ui.py
src/openstackai/easy/: README.md  __init__.py  agent_factory.py  analyze.py  ask.py  chat.py  code.py  config.py  extract.py  fetch.py  generate.py  guardrails.py  handoff.py  llm_interface.py  mcp.py  rag.py  research.py  summarize.py  trace.py  translate.py
src/openstackai/errors/: __init__.py
src/openstackai/evaluation/: __init__.py  base.py  criteria.py  evaluator.py
src/openstackai/instructions/: __init__.py  guidelines.py  instruction.py  persona.py  system_prompt.py
src/openstackai/integrations/: README.md  __init__.py  langchain_adapter.py  semantic_kernel_adapter.py  vector_db.py
src/openstackai/kernel/: __init__.py  context.py  filters.py  kernel.py  services.py
src/openstackai/models/: __init__.py  anthropic.py  azure_openai.py  base.py  gemini.py  litellm.py  ollama.py  openai.py  registry.py
src/openstackai/multimodal/: __init__.py  audio.py  content.py  image.py  video.py
src/openstackai/openapi/: __init__.py  client.py  parser.py  tools.py
src/openstackai/orchestrator/: README.md  __init__.py
src/openstackai/plugins/: __init__.py  base.py  decorators.py  loader.py  registry.py
src/openstackai/runner/: __init__.py  executor.py  streaming.py
src/openstackai/sessions/: __init__.py  base.py  manager.py  memory.py  redis.py  sqlite.py
src/openstackai/skills/: __init__.py  action_skill.py  builtin.py  registry.py  skill.py  tool_skill.py
src/openstackai/tokens/: __init__.py  cost.py  counter.py
src/openstackai/tools/: __init__.py  base.py  discovery.py  watcher.py
src/openstackai/usecases/: README.md  __init__.py  industry.py
src/openstackai/vectordb/: __init__.py  base.py  chroma.py  memory.py  pinecone.py  qdrant.py  weaviate.py
src/openstackai/voice/: __init__.py  session.py  stream.py  synthesis.py  transcription.py
src/pyagent/: __init__.py  __init__.pyi
src/pyagent/a2a/: __init__.py  client.py  protocol.py  registry.py  server.py
src/pyagent/blueprint/: __init__.py  blueprint.py  orchestrator.py  patterns.py  pipeline.py  workflow.py
src/pyagent/cli/: __init__.py  app.py  main.py
src/pyagent/code_executor/: __init__.py  executor.py
src/pyagent/config/: __init__.py  builder.py  loader.py  schema.py
src/pyagent/core/: __init__.py  agent.py  base.py  cache.py  llm.py  memory.py
src/pyagent/devui/: __init__.py  dashboard.py  debugger.py  ui.py
src/pyagent/easy/: __init__.py  agent_factory.py  analyze.py  ask.py  chat.py  (+14 more)
src/pyai/: README.md  __init__.pyi  py.typed
tests/: __init__.py  conftest.py  test_azure_integration.py  test_config.py  test_core.py  test_easy_features.py  test_evaluation.py  test_integration_smoke.py  test_integrations.py  test_kernel.py  test_live_integration.py  test_models.py  test_openapi.py  test_orchestrator.py  test_phase2_phase3.py  test_plugins.py  test_runner.py  test_sessions.py  test_smoke.py  test_tokens.py  test_usecases.py  test_validation.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: A2AClient.md  A2AServer.md  API-Reference.md  Architecture.md  AudioContent.md  Azure-AD-Auth.md  Blueprint-Module.md  Changelog.md  Contributing.md  Core-Module.md  Design-Philosophy.md  Easy-Module.md  Evaluation.md  Evaluator.md  Handoffs.md  Home.md  Installation.md  Kernel-Module.md  Kernel-Registry.md  Memory.md  Multimodal-Module.md  OpenAPI-Module.md  OpenAPI-Tools.md  OpenAPIParser.md  Orchestration-Patterns.md  Overview.md  Pinecone.md  PluginRegistry.md  Qdrant.md  Quick-Start.md  Runner-Module.md  Runner.md  Sessions-Module.md  Sessions.md  Skills-Module.md  Software-Factories.md  TestCase.md  Tracing.md  Vector-Database.md  Voice.md  (+12 more)
(+88 files in other folders)
