[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyagent"
version = "0.1.0"
description = "The Pandas of AI Agents - Build AI applications in 3 lines or less"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PyAgent Contributors" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "rag",
    "artificial-intelligence",
    "machine-learning",
    "openai",
    "anthropic",
    "chatbot",
    "automation",
    "pandas",
    "simple",
    "easy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
web = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]
docs = [
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pyagent/pyagent"
Documentation = "https://pyagent.readthedocs.io"
Repository = "https://github.com/pyagent/pyagent"
Issues = "https://github.com/pyagent/pyagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyagent"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
