[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstackai"
version = "0.6.0"
description = "The Pandas of AI Agents - Build AI applications in 3 lines or less"
readme = "README_PYPI.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "OpenStackAI Contributors" }
]
maintainers = [
    { name = "OpenStackAI Team", email = "openstackai@example.com" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "rag",
    "artificial-intelligence",
    "machine-learning",
    "openai",
    "anthropic",
    "azure",
    "chatbot",
    "automation",
    "pandas",
    "simple",
    "easy",
    "multi-agent",
    "orchestration",
    "mcp",
    "semantic-kernel",
    "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
azure = [
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-search-documents>=11.4.0",
]
web = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]
docs = [
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
]
semantic-kernel = [
    "semantic-kernel>=0.5.0",
]
vector = [
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "pinecone-client>=3.0.0",
    "qdrant-client>=1.7.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "azure-identity>=1.15.0",
    "azure-search-documents>=11.4.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "semantic-kernel>=0.5.0",
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/gitpavleenbali/PYAI"
Documentation = "https://github.com/gitpavleenbali/PYAI#readme"
Repository = "https://github.com/gitpavleenbali/PYAI"
Issues = "https://github.com/gitpavleenbali/PYAI/issues"
Changelog = "https://github.com/gitpavleenbali/PYAI/blob/master/docs/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openstackai"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
exclude = ["examples/*", "tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E721",   # Type comparison (isinstance check preference)
    "E722",   # Bare except (acceptable in some contexts)
    "F401",   # Unused import (often intentional in __init__.py)
    "F811",   # Redefinition of unused name
    "F821",   # Undefined name (false positive for forward references)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403", "F811", "E722"]
"examples/*" = ["E501", "E722", "F401", "F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
strict_optional = false
check_untyped_defs = false
disable_error_code = [
    "assignment",
    "arg-type",
    "return-value",
    "attr-defined",
    "name-defined",
    "union-attr",
    "misc",
    "index",
    "var-annotated",
    "list-item",
    "dict-item",
    "valid-type",
    "operator",
    "override",
    "abstract",
    "no-any-return",
    "import-untyped",
    "str-bytes-safe",
]

[tool.pyright]
# Lenient settings for lazy-loading module pattern
pythonVersion = "3.10"
typeCheckingMode = "off"
exclude = ["examples/**", "tests/**"]

[tool.pylint]
# Disable common test-specific warnings
disable = [
    "W0621",  # Redefining name from outer scope (fixture shadowing)
    "W0613",  # Unused argument (common in test fixtures)
    "W0612",  # Unused variable
    "W0718",  # Catching too general exception
    "W0212",  # Access to protected member
    "C0116",  # Missing function docstring
    "C0115",  # Missing class docstring
    "R0903",  # Too few public methods
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B102", "B104", "B303", "B307", "B310", "B324", "B601", "B602", "B605"]
# B101: assert used
# B102: exec used (code executor)
# B104: hardcoded bind all interfaces (server)
# B303, B324: md5 hash (cache keys, not for security)
# B307: eval used (math operations)
# B310: urlopen (A2A client)
# B601, B602, B605: subprocess/shell (code executor)

[tool.coverage.run]
source = ["src/openstackai"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
